--- a/roles/zabbix_server/tasks/mysql.yml
+++ b/roles/zabbix_server/tasks/mysql.yml
@@ -54,31 +54,7 @@
   tags:
     - zabbix-server
     - database
-
-
-
-
-
-
-#- name: Create zabbix database user
-#  become: true
-#  community.mysql.mysql_user:
-#    login_unix_socket: /var/run/mysqld/mysqld.sock
-#    login_user: "root"
-#    login_password: "root"
-#    name: "zabbix"
-#    password: "zabbix"
-#    priv: '*.*:ALL'
-#    host: "%"
-#    append_privs: true
-
-
-
-
-
-
-
-
+    - database_user
 
 - name: "Get the file for create.sql >= 3.0"
   shell: ls -1 {{ datafiles_path }}/{{ 'create' if zabbix_version is version('6.0', '<') else 'server' }}.sq*
